arithmetics.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(a) {
                      return a;
                   },
      peg$c1 = function(a, b) {
                                        var resultado = [];
                                         resultado.push(a);
                                         for (var i = 0; i < b.length; i++) {
                                           resultado.push(b[i][1]);
                                         }
                                         return resultado;

                                   },
      peg$c2 = function(exp) {return exp;},
      peg$c3 = function(id, args, codigo, ret) {
                                                                                                          var result = {};
                                                                                                          var arg = []
                                                                                                          if(!codigo) {
                                                                                                            codigo = [];
                                                                                                          }
                                                                                                          if (args && args.length > 0) {
                                                                                                          arg.push(args[0]);
                                                                                                          for (var i = 0; i < args[1].length; i++)
                                                                                                              arg.push(args[1][i][1]);
                                                                                                            }
                                                                                                          result = {
                                                                                                                  nombre_funcion : id,
                                                                                                                  arguments : arg,
                                                                                                                  code : codigo
                                                                                                            }
                                                                                                            if(ret)
                                                                                                              result["return"] = ret[1];
                                                                                                           return result;
                                                                                                        },
      peg$c4 = function(left, right) {
                                                                                var resultado = op_recursive(left, right[0][0], right);
                                                                                return resultado;
                                                                              },
      peg$c5 = function(b) {return b;},
      peg$c6 = function(cond, act) {
                                                                  var resultado = {
                                                                    type: "WHILE",
                                                                    condition: cond,
                                                                    actions : act
                                                                  };
                                                                  return resultado;
                                                                },
      peg$c7 = function(ini, cond, ident, i, act) {
                                                                            var incremento;
                                                                            if (i == "++") {
                                                                              incremento = 1;
                                                                            } else {
                                                                              incremento = -1;
                                                                            }
                                                                            var resultado = {
                                                                              type: "FOR",
                                                                              initial: ini,
                                                                              condition : cond,
                                                                              increment: {
                                                                                id : ident,
                                                                                quantity: incremento
                                                                              },
                                                                              actions: act
                                                                            };
                                                                            return resultado;
                                                                          },
      peg$c8 = function(cond, a, b) {
                                                                  var resultado = {
                                                                        type: "IF",
                                                                        condition: cond,
                                                                        type2: "THEN",
                                                                        first: a,
                                                                        type3:  "ELSE",
                                                                        second: b,
                                                              };
                                                              return resultado;
                                                          },
      peg$c9 = function(i, a) {
                var resultado = {
                      type: "=",
                      id: i,
                      value: a
            };
            return resultado;
            },
      peg$c10 = function(a) {return a;},
      peg$c11 = function(left, rest) {
            var resultado = op_recursive(left, rest[0][0], rest);
            return resultado;
          },
      peg$c12 = function(m) { return m;},
      peg$c13 = function(left, rest) {
           var resultado = op_recursive(left, rest[0][0], rest);
          return resultado;
          },
      peg$c14 = function(p) {if (p.value == "return") return false; else return true;},
      peg$c15 = function(p) {return p;},
      peg$c16 = function(boolean) { return { type: "BOOLEAN", value:boolean } },
      peg$c17 = function(com) { return com; },
      peg$c18 = function(cid) { tabla_constantes.push(cid); return { type: "ID", value:cid, constante: "si" } },
      peg$c19 = function(id) {
          if(tabla_constantes.indexOf(id) > -1)
            return { type: "ID", value:id, constante: "si" }
          else   return { type: "ID", value:id, constante: "no" }
        },
      peg$c20 = function(id, args) {

                                                              var result = {};
                                                              var arg = []
                                                              arg.push(args[0]);
                                                              for (var i = 0; i < args[1].length; i++)
                                                                  arg.push(args[1][i][1]);
                                                              var resultado = {
                                                                        type : "FUNCTION_CALL",
                                                                        value: id,
                                                                        args : arg
                                                                              }
                                                              return resultado;
                                                            },
      peg$c21 = peg$otherExpectation("integer"),
      peg$c22 = function(n) { return { type: "NUMBER", value:n } },
      peg$c23 = /^[ \t\n\r]/,
      peg$c24 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c25 = "if",
      peg$c26 = peg$literalExpectation("if", false),
      peg$c27 = function() { return 'if'; },
      peg$c28 = "then",
      peg$c29 = peg$literalExpectation("then", false),
      peg$c30 = function() { return 'then'; },
      peg$c31 = "else",
      peg$c32 = peg$literalExpectation("else", false),
      peg$c33 = function() { return 'else'; },
      peg$c34 = "true",
      peg$c35 = peg$literalExpectation("true", false),
      peg$c36 = function() { return 'true'; },
      peg$c37 = "false",
      peg$c38 = peg$literalExpectation("false", false),
      peg$c39 = function() { return 'false'; },
      peg$c40 = "while",
      peg$c41 = peg$literalExpectation("while", false),
      peg$c42 = function() { return 'while'; },
      peg$c43 = "for",
      peg$c44 = peg$literalExpectation("for", false),
      peg$c45 = function() { return 'for'; },
      peg$c46 = "++",
      peg$c47 = peg$literalExpectation("++", false),
      peg$c48 = function() { return '++'; },
      peg$c49 = "--",
      peg$c50 = peg$literalExpectation("--", false),
      peg$c51 = function() { return '--'; },
      peg$c52 = "<",
      peg$c53 = peg$literalExpectation("<", false),
      peg$c54 = function() { return '<'; },
      peg$c55 = "<=",
      peg$c56 = peg$literalExpectation("<=", false),
      peg$c57 = function() { return '<='; },
      peg$c58 = ">",
      peg$c59 = peg$literalExpectation(">", false),
      peg$c60 = function() { return '>'; },
      peg$c61 = ">=",
      peg$c62 = peg$literalExpectation(">=", false),
      peg$c63 = function() { return '>='; },
      peg$c64 = "==",
      peg$c65 = peg$literalExpectation("==", false),
      peg$c66 = function() { return '=='; },
      peg$c67 = "+",
      peg$c68 = peg$literalExpectation("+", false),
      peg$c69 = function() { return '+'; },
      peg$c70 = "-",
      peg$c71 = peg$literalExpectation("-", false),
      peg$c72 = function() { return '-'; },
      peg$c73 = "*",
      peg$c74 = peg$literalExpectation("*", false),
      peg$c75 = function() { return '*'; },
      peg$c76 = "/",
      peg$c77 = peg$literalExpectation("/", false),
      peg$c78 = function() { return '/'; },
      peg$c79 = "->",
      peg$c80 = peg$literalExpectation("->", false),
      peg$c81 = "return",
      peg$c82 = peg$literalExpectation("return", false),
      peg$c83 = function() { return 'return'; },
      peg$c84 = "const",
      peg$c85 = peg$literalExpectation("const", false),
      peg$c86 = function() { return 'const'; },
      peg$c87 = "{",
      peg$c88 = peg$literalExpectation("{", false),
      peg$c89 = "}",
      peg$c90 = peg$literalExpectation("}", false),
      peg$c91 = "(",
      peg$c92 = peg$literalExpectation("(", false),
      peg$c93 = ")",
      peg$c94 = peg$literalExpectation(")", false),
      peg$c95 = ";",
      peg$c96 = peg$literalExpectation(";", false),
      peg$c97 = ",",
      peg$c98 = peg$literalExpectation(",", false),
      peg$c99 = /^[0-9]/,
      peg$c100 = peg$classExpectation([["0", "9"]], false, false),
      peg$c101 = function(digits) { return parseInt(digits, 10); },
      peg$c102 = /^[a-z_]/i,
      peg$c103 = peg$classExpectation([["a", "z"], "_"], false, true),
      peg$c104 = /^[a-z0-9_]/i,
      peg$c105 = peg$classExpectation([["a", "z"], ["0", "9"], "_"], false, true),
      peg$c106 = function(id) {  return id; },
      peg$c107 = "=",
      peg$c108 = peg$literalExpectation("=", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsecoma();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsecoma() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseexpression();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseCOMA();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseexpression();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseCOMA();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseexpression();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseexpression() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsebucle();
    if (s1 === peg$FAILED) {
      s1 = peg$parseconditional();
      if (s1 === peg$FAILED) {
        s1 = peg$parsefuncion();
        if (s1 === peg$FAILED) {
          s1 = peg$parsecomparation();
        }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c2(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsefuncion() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$parseidentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseASSIGN();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseFUNCTION_ARROW();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseLEFTPAR();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseargumentos();
            if (s5 === peg$FAILED) {
              s5 = null;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseRIGHTPAR();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseLEFTBRACE();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parsecoma();
                  if (s8 === peg$FAILED) {
                    s8 = null;
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = peg$currPos;
                    s10 = peg$parseRETURN();
                    if (s10 !== peg$FAILED) {
                      s11 = peg$parseexpression();
                      if (s11 !== peg$FAILED) {
                        s10 = [s10, s11];
                        s9 = s10;
                      } else {
                        peg$currPos = s9;
                        s9 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s9;
                      s9 = peg$FAILED;
                    }
                    if (s9 === peg$FAILED) {
                      s9 = null;
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parseCOMA();
                      if (s10 === peg$FAILED) {
                        s10 = null;
                      }
                      if (s10 !== peg$FAILED) {
                        s11 = peg$parseRIGHTBRACE();
                        if (s11 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c3(s1, s5, s8, s9);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecomparation() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseassign();
    if (s1 === peg$FAILED) {
      s1 = peg$parseadditive();
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseCOMPARATOR();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseassign();
        if (s5 === peg$FAILED) {
          s5 = peg$parseadditive();
        }
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseCOMPARATOR();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseassign();
            if (s5 === peg$FAILED) {
              s5 = peg$parseadditive();
            }
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseassign();
      if (s1 === peg$FAILED) {
        s1 = peg$parseadditive();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c5(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsebucle() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    s1 = peg$parseWHILE();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsecomparation();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseLEFTBRACE();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsecoma();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseCOMA();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseRIGHTBRACE();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c6(s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseFOR();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseLEFTPAR();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseassign();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseCOMA();
            if (s4 !== peg$FAILED) {
              s5 = peg$parsecomparation();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseCOMA();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseID();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseINCREMENT();
                    if (s8 === peg$FAILED) {
                      s8 = peg$parseDECREMENT();
                    }
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parseRIGHTPAR();
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parseLEFTBRACE();
                        if (s10 !== peg$FAILED) {
                          s11 = peg$parsecoma();
                          if (s11 !== peg$FAILED) {
                            s12 = peg$parseCOMA();
                            if (s12 !== peg$FAILED) {
                              s13 = peg$parseRIGHTBRACE();
                              if (s13 !== peg$FAILED) {
                                peg$savedPos = s0;
                                s1 = peg$c7(s3, s5, s7, s8, s11);
                                s0 = s1;
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseconditional() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseIF();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsecomparation();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseTHEN();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseexpression();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseELSE();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseexpression();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c8(s2, s4, s6);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseargumentos() {
    var s0, s1, s2, s3, s4, s5;
